--- a/manuscripts/24-causal-diagrams-tutorial-jb/v2-short-causal-diagrams.qmd
+++ b/manuscripts/24-causal-diagrams-tutorial-jb/v2-short-causal-diagrams.qmd
@@ -134,9 +134,7 @@ confidence. Debates within the causal data sciences are peripheral to causal inf
 optimistic for a rapid uptake of causal inference methodology across the human sciences that presently lack it. The articles in this special issue of *Evolutionary Human Sciences* give
 testimony to this hope. -->
 
-Within the frameworks of causal data science, causal diagrams, also known as 'directed acyclic graphs' or 'DAGs,' have been developed as powerful inferential tools. Their applications are grounded in a robust
-system of formal mathematical proofs that should instil confidence. Nevertheless, causal diagrams do not require mathematical training. This is a great advantage. because it makes causal inference accessible.
-However accessibility invites risks. Causal diagrams only acquire their significance when integrated within the broader theoretical frameworks and workflows of causal data science. These frameworks differ from those of traditional data science by attempting to estimate pre-specified contrasts, or 'estimands,' among counterfactual states of the world. These counterfactual states must be simulated from data, under explicit assumptions that must be justified [@vansteelandt2012; @robins1986; @edwards2015]. These *structural assumptions* differ from the *statistical assumptions* familiar to traditionally trained data scientists. Yet, because causal inference recovers counterfactuals by applying statistical models to observed data, careful statistical validations must also enter its workflows. We cannot assume that traditionally trained human scientists, even those with excellent statistical training, have familiarity with the demands of counterfactual inference [@ogburn2021; @bulbulia2023a]. Using causal diagrams without understanding causal inference risks inadvertently worsen the causality crisis by fostering misguided confidence where none is due.
+Within the frameworks of causal data science, causal diagrams, also known as 'directed acyclic graphs' or 'DAGs,' have been developed as powerful inferential tools. Their applications are grounded in a robust system of formal mathematical proofs that should instil confidence. Nevertheless, causal diagrams do not require mathematical training. This is a great advantage. because it makes causal inference accessible. However accessibility invites risks. Causal diagrams only acquire their significance when integrated within the broader theoretical frameworks and workflows of causal data science. These frameworks differ from those of traditional data science by attempting to estimate pre-specified contrasts, or 'estimands,' among counterfactual states of the world. These counterfactual states must be simulated from data, under explicit assumptions that must be justified [@vansteelandt2012; @robins1986; @edwards2015]. These *structural assumptions* differ from the *statistical assumptions* familiar to traditionally trained data scientists. Yet, because causal inference recovers counterfactuals by applying statistical models to observed data, careful statistical validations must also enter its workflows. We cannot assume that traditionally trained human scientists, even those with excellent statistical training, have familiarity with the demands of counterfactual inference [@ogburn2021; @bulbulia2023a]. Using causal diagrams without understanding causal inference risks inadvertently worsen the causality crisis by fostering misguided confidence where none is due.
 
 Here, I offer readers of *Evolutionary Human Science* practical guidance
 for creating effective, safe, causal diagrams.
@@ -144,24 +142,16 @@ for creating effective, safe, causal diagrams.
 **Part 1** briefly introduces core concepts and theories in causal data science, emphasising the fundamental assumptions and the demands they impose on causal inferential workflows. 
 sponsibility.* 
 
-**Part 2** introduces essential terminology and explores elementary use cases, focussing on the benefits of sequentially order in one's graph for evaluating confounding biases. These diagrams highlight the critical role of timing, underscoring its significance not only in analysis but also in securing quality measurements for the relative timing of events within the dataset. 
-
-**Part 3** uses sequentially ordered causal diagrams to clarify concepts of interaction (moderation) and effect modification.
+**Part 2** introduces essential terminology and explores elementary use cases. These diagrams highlight the critical role of timing, underscoring its significance not only in analysis but also in securing quality measurements for the relative timing of events within the dataset. 
 
 **Part 4** clarifies biases arising from measurement error. 
 
-**Part 5** clarifies restriction biases arising from a mismatch between a study sample population and a target sample population. 
+**Part 5** clarifies restriction biases arising from censoring.
 
-**Part 6** uses causal diagrams to clarify causal estimation in which there are multiple exposures, focussing on causal mediation, and time-varying treatments.
+**Part 6** focussies on biases from experiments.
 
-There are many good resources available for learning causal diagrams
-[@rohrer2018; @hernan2023; @cinelli2022; @barrett2021; @mcelreath2020;
-@greenland1999; @suzuki2020; @pearl2009]. This work hopes to contribute to
-these resources, first by providing additional conceptual orientation to
-the frameworks and workflows of causal data science, outside of which
-the application of causal diagrams is risky; second, by underscoring the
-benefits of sequential order in one's causal diagrams to clarify demands
-for data collection and analysis; third by using causal diagrams to clarify threats to target validity arising from sample/target population mismatch, fourth, by using causal diagrams to clarify questions of causal interaction, mediation, and longitudinal feedback, about which there remains considerable confusions in many human sciences.
+There are many good resources available for learning causal diagrams [@rohrer2018; @hernan2023; @cinelli2022; @barrett2021; @mcelreath2020; @greenland1999; @suzuki2020; @pearl2009]. This work hopes to contribute to these resources, first by providing additional conceptual orientation to the frameworks and workflows of causal data science, outside of which
+the application of causal diagrams is risky; second, by underscoring the benefits of sequential order in one's causal diagrams to clarify demands for data collection and analysis; third by using causal diagrams to clarify threats to target validity arising from sample/target population mismatch, fourth, by using causal diagrams to clarify questions of causal interaction, mediation, and longitudinal feedback, about which there remains considerable confusions in many human sciences.
 
 
 ## Part 1. Overview of Causal Data Science
@@ -184,11 +174,7 @@ intervention. Commonly, we refer to such interventions as 'exposures' or
 'treatments;' we refer to the possible effects of interventions as
 'potential outcomes.'
 
-Consider a binary treatment variable $A \in \{0,1\}$. For each unit $i$
-in the set $\{1, 2, \ldots, n\}$, when $A_i$ is set to 0, the potential
-outcome under this condition is denoted, $Y_i(a=0)$. Conversely, when
-$A_i$ is set to 1, the potential outcome is denoted, $Y_i(1)$. We
-refer to the terms $Y_i(1)$ and $Y_i(0)$ as 'potential outcomes' because
+Consider a binary treatment variable $A \in \{0,1\}$. For each unit $i$ in the set $\{1, 2, \ldots, n\}$, when $A_i$ is set to 0, the potential outcome under this condition is denoted, $Y_i(a=0)$. Conversely, when $A_i$ is set to 1, the potential outcome is denoted, $Y_i(1)$. We refer to the terms $Y_i(1)$ and $Y_i(0)$ as 'potential outcomes' because
 until realised, the effects of interventions describe counterfactual states.
 
 Suppose that each unit $i$ many receive either $A_i = 1$ or $A_i = 0$. The
@@ -212,8 +198,7 @@ $$
 \tau_i = Y_i(1) - Y_i(0)
 $$
 
-Notice that each unit can only be exposed to at most one level of an exposure
-$A_i = a$ at any time. This implies that $\tau_i$, is not merely unobserved but inherently *unobservable* (see discussion in Appendix 3). 
+Notice that each unit can only be exposed to at most one level of an exposure $A_i = a$ at any time. This implies that $\tau_i$, is not merely unobserved but inherently *unobservable* (see discussion in Appendix 3). 
 
 That individual causal effects cannot be identified from observations is known as '*the fundamental problem of causal inference*' [@rubin1976; @holland1986].
 
@@ -371,17 +356,11 @@ $$
 ATE = \mathbb{E}[Y(1) | L] - \mathbb{E}[Y(0) | L]
 $$
 
-In the disciplines of cultural evolution, where experimental control is
-impractical, causal inferences hinge on the plausibility of satisfying
-this 'no unmeasured confounding' assumption (see: **Appendix 1**)
+In the disciplines of cultural evolution, where experimental control is impractical, causal inferences hinge on the plausibility of satisfying this 'no unmeasured confounding' assumption (see: **Appendix 1**)
 
 Importantly, causal diagrams primarily function to identify sources of bias that may influence the association between an exposure and outcome. They highlight those aspects of the assumed causal order relevant to the assessment of 'no-unmeasured confounding.' Although causal diagrams can also be useful for examining structural features of measurement-error bias and threats to target validity from sample/population mismatch, certain of these threats are not amenable to Markov factorisation (see $\S 2.3$). For instance, in $\S 2.8$, we consider the limitations of causal diagrams in addressing uncorrelated measurement error bias, which does not manifest on causal diagrams. In  $\S 3.1.6$, we employ causal diagrams to clarify threats to external validity from sample restriction (effect-modifier-restriction bias). In these instances, we must introduce colouring conventions that repurpose causal diagrams for somewhat different problems than those they were originally designed to address, namely, problems of confounding bias.
 
-Finally, it is important to underscore that without randomisation,
-we cannot fully ensure the no-unmeasured confounding assumption that
-enables us to recover the missing counterfactuals we require to
-consistently estimate causal effects from data [@stuart2015;
-@greifer2023]. Because we must nearly always assume unmeasured confounding, the workflows of causal data science must ultimately rely on sensitivity analyses to clarify how much unmeasured confounding would be required to compromise a study's findings [@vanderweele2019].
+Finally, it is important to underscore that without randomisation, we cannot fully ensure the no-unmeasured confounding assumption that enables us to recover the missing counterfactuals we require to consistently estimate causal effects from data [@stuart2015; @greifer2023]. Because we must nearly always assume unmeasured confounding, the workflows of causal data science must ultimately rely on sensitivity analyses to clarify how much unmeasured confounding would be required to compromise a study's findings [@vanderweele2019].
 
 #### 1.2.3 Assumption 3: Positivity
 
