--- a/manuscripts/24-daryl-dones-pols/24-daryl-dones-pols.tex
+++ b/manuscripts/24-daryl-dones-pols/24-daryl-dones-pols.tex
@@ -42,14 +42,28 @@
 \setlength{\emergencystretch}{3em} % prevent overfull lines
 \setcounter{secnumdepth}{-\maxdimen} % remove section numbering
 % Make \paragraph and \subparagraph free-standing
+\makeatletter
 \ifx\paragraph\undefined\else
   \let\oldparagraph\paragraph
-  \renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
+  \renewcommand{\paragraph}{
+    \@ifstar
+      \xxxParagraphStar
+      \xxxParagraphNoStar
+  }
+  \newcommand{\xxxParagraphStar}[1]{\oldparagraph*{#1}\mbox{}}
+  \newcommand{\xxxParagraphNoStar}[1]{\oldparagraph{#1}\mbox{}}
 \fi
 \ifx\subparagraph\undefined\else
   \let\oldsubparagraph\subparagraph
-  \renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
+  \renewcommand{\subparagraph}{
+    \@ifstar
+      \xxxSubParagraphStar
+      \xxxSubParagraphNoStar
+  }
+  \newcommand{\xxxSubParagraphStar}[1]{\oldsubparagraph*{#1}\mbox{}}
+  \newcommand{\xxxSubParagraphNoStar}[1]{\oldsubparagraph{#1}\mbox{}}
 \fi
+\makeatother
 
 
 \providecommand{\tightlist}{%
@@ -884,10 +898,9 @@ practical guide.
 
 \bibitem[\citeproctext]{ref-campbell2004}
 Campbell, WK, Bonacci, AM, Shelton, J, Exline, JJ, and Bushman, BJ
-(2004) Psychological entitlement: interpersonal consequences and
+(2004) Psychological entitlement: Interpersonal consequences and
 validation of a self-report measure. \emph{Journal of Personality
 Assessment}, \textbf{83}(1), 29--45.
-doi:\href{https://doi.org/10.1207/s15327752jpa8301_04}{10.1207/s15327752jpa8301\_04}.
 
 \bibitem[\citeproctext]{ref-cutrona1987}
 Cutrona, CE, and Russell, DW (1987) The provisions of social
@@ -914,7 +927,7 @@ Aotearoa.
 
 \bibitem[\citeproctext]{ref-fraser_coding_2020}
 Fraser, G, Bulbulia, J, Greaves, LM, Wilson, MS, and Sibley, CG (2020)
-Coding responses to an open-ended gender measure in a new zealand
+Coding responses to an open-ended gender measure in a {N}ew {Z}ealand
 national sample. \emph{The Journal of Sex Research}, \textbf{57}(8),
 979--986.
 doi:\href{https://doi.org/10.1080/00224499.2019.1687640}{10.1080/00224499.2019.1687640}.
@@ -971,7 +984,7 @@ and sample details for the new zealand attitudes and values study}}.
 \bibitem[\citeproctext]{ref-sibley2012a}
 Sibley, CG, and Bulbulia, J (2012) Faith after an earthquake: A
 longitudinal study of religion and perceived health before and after the
-2011 christchurch new zealand earthquake. \emph{PloS One},
+2011 {C}hristchurch {N}ew {Z}ealand earthquake. \emph{PloS One},
 \textbf{7}(12), e49648.
 
 \bibitem[\citeproctext]{ref-sibley2011}
@@ -1022,12 +1035,12 @@ doi:\href{https://doi.org/10.7326/M16-2607}{10.7326/M16-2607}.
 \bibitem[\citeproctext]{ref-vanderweele2013}
 VanderWeele, TJ, and Hernan, MA (2013) Causal inference under multiple
 versions of treatment. \emph{Journal of Causal Inference},
-\textbf{1}(1), 120.
+\textbf{1}(1), 1--20.
 
 \bibitem[\citeproctext]{ref-vanderweele2020}
 VanderWeele, TJ, Mathur, MB, and Chen, Y (2020) Outcome-wide
 longitudinal designs for causal inference: A new template for empirical
-studies. \emph{Statistical Science}, \textbf{35}(3), 437466.
+studies. \emph{Statistical Science}, \textbf{35}(3), 437--466.
 
 \bibitem[\citeproctext]{ref-williams_cyberostracism_2000}
 Williams, KD, Cheung, CKT, and Choi, W (2000) Cyberostracism: Effects of
@@ -1036,7 +1049,7 @@ Psychology}, \textbf{79}(5), 748--762.
 doi:\href{https://doi.org/10.1037/0022-3514.79.5.748}{10.1037/0022-3514.79.5.748}.
 
 \bibitem[\citeproctext]{ref-williams2021}
-Williams, NT, and Díaz, I (2021) \emph{Lmtp: Non-parametric causal
+Williams, NT, and Díaz, I (2021) \emph{{l}mtp: Non-parametric causal
 effects of feasible interventions based on modified treatment policies}.
 doi:\href{https://doi.org/10.5281/zenodo.3874931}{10.5281/zenodo.3874931}.
 
@@ -1403,18 +1416,6 @@ each of the following things last week'' and responded to an item
 
 \subsection{Appendix B. Baseline Demographic
 Statistics}\label{appendix-demographics}
-
-\begin{table}
-
-\caption{\label{tbl-B}}
-
-\centering{
-
-\captionsetup{labelsep=none}
-
-}
-
-\end{table}%
 
 \begin{longtable}[]{@{}ll@{}}
 \caption{Baseline demography
