--- a/manuscripts/24-jb-dags/24-jb-dags.qmd
+++ b/manuscripts/24-jb-dags/24-jb-dags.qmd
@@ -1,9 +1,9 @@
 ---
 title: "Causal Directed Acyclic Graphs (DAGs): A Practical Guide"
 abstract: |
-  In causal inference, accurately quantifying a causal effect requires contrasting hypothetical counterfactual states simulated from data. This complex task relies on a framework of explicit assumptions and systematic, multi-step workflows that begin by stating a clear causal question and a clear target population for whom inferences are meant to be valid. Causal directed acyclic graphs (DAGs) are tools within this multi-step workflow. We deploy them after we have stated our causal question and stated our target population, to help us understand whether and how the counterfactual contrasts we target can be identified from data, based on assumptions we obtain from previous science (structural assumptions). This guide offers practical advice for constructing causal directed acyclic graphs that are effective and safe. These causal graphs make clear causal inference’s mission-critical demand for obtaining accuracy in the relative timing of events of confounders, treatements, and outcomes, and how, even when timing is ensured, valid causal inferences remain elusive.
+  Accurately quantifying a causal effect requires contrasting states of the world, some of which are counterfactual. Counterfactual data science relies on a framework of explicit assumptions and systematic, multi-step workflows. We start by stating the counterfactual contrasts of interest and the target population for whom inferences are meant to be valid. Causal directed acyclic graphs -- abbreviated to "DAGs" -- are tools within this multi-step workflow that help us understand whether the counterfactual contrasts we seek can be identified from data.  This guide offers practical advice for constructing causal directed acyclic graphs (DAGs) that are effective and safe. These causal graphs make clear causal inference’s mission-critical demand for obtaining accuracy in the relative timing of events of confounders, treatments, and outcomes. We close by reviewing Single World Interventions Graphs, which are more general than causal directed acyclic graphs, and are especially useful for assessing identification in dynamic longitudinal settings.  
    
-   **KEYWORDS**: *Causal Inference*; *Culture*; *DAGs*;* *Evolution*; *Human Sciences*; *Longitudinal*. 
+   **KEYWORDS**: *Causal Inference*; *Culture*; *DAGs*;* *Evolution*; *Human Sciences*; *Longitudinal*; Single World Intervention Graphs, Single World Intervention Template, SWIGs; SWITs.
 author: 
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington, New Zealand
@@ -106,7 +106,7 @@ Human research begins with two questions:
 > 2. For which population does this knowledge generalise?  
 
 
-In many human sciences, our questions are causal. What want to understand what would happen if we were to intervene on the variables of interest. However, in many observational human sciences, in place of causality, we settle for "associations" and "predictions."  Causal directed acyclic graphs -- or causal graphs as we will also cal  them -- were developed to help investigators check whether their causal questions may be answered with data, and how. This is a challenging because to quantitatively address causal questions, we must contrast different ways the world might have been, using data we have accessed from the world as it is.
+In most human sciences our questions are causal. What want to understand what would happen if we were to intervene on the variables of interest. However, many human scientists settle for "associations" and "predictions."  Causal directed acyclic graphs -- or causal graphs as we will also cal  them -- were developed to help investigators check whether their causal questions may be answered with data, and how. This is a challenging because to quantitatively address causal questions, we must contrast different ways the world might have been, using data we have accessed from the world as it is.
 
 After briefly reviewing the assumptions required for quantitative causal inference, and explaining where causal graphs fit into the workflow, we provide a users guide
 
